--- a/public/views/create_personage.html
+++ b/public/views/create_personage.html
@@ -15,6 +15,54 @@
     <div data-ng-include data-src="'main-menu.html'"></div>
     <h3 class="text-center">{{personage.name}}</h3>
 
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                <p class="lead">
+                    <strong>Раса:</strong>
+                </p>
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                <p class="lead">{{personage.Race.name}}</p>
+            </div>
+        </div>
+
+        <form name="ageForm">
+            <div class="row">
+                <div class="col-xs-offset-1 col-xs-2">
+                    <p class="lead">
+                        <strong><label class="control-label" for="age">Возраст:</label></strong>
+                    </p>
+                </div>
+                <div class="col-xs-offset-2 col-xs-4">
+                    <input type="number" class="form-control" id="age" name="age" placeholder="25" ng-model="age"
+                           min="0" max="{{personage.Race.max_age}}" required>
+                <span style="color:red" ng-show="ageForm.age.$invalid && ageForm.age.$dirty">
+                    <span ng-show="ageForm.age.$error.required">Введите текущий возраст</span>
+                    <span ng-show="ageForm.age.$error.max">Возраст персонажа больше максимального для расы</span>
+                </span>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-offset-1 col-xs-2">
+                    <p class="lead">
+                        <strong><label class="control-label" for="max_age">Макс. возраст:</label></strong>
+                    </p>
+                </div>
+                <div class="col-xs-offset-2 col-xs-4">
+                    <input type="number" class="form-control" id="max_age" name="max_age" placeholder="25" ng-model="max_age"
+                           min="0" max="{{personage.Race.max_age}}" required>
+                <span style="color:red" ng-show="ageForm.max_age.$invalid && ageForm.max_age.$dirty">
+                    <span ng-show="ageForm.max_age.$error.required">Введите максимальный возраст</span>
+                    <span ng-show="ageForm.max_age.$error.max">Максимальный возраст персонажа больше максимального для расы</span>
+                </span>
+                </div>
+            </div>
+        </form>
+
+    </div>
+
     <div>
         <div class="panel-group" id="accordion">
 
@@ -330,6 +378,8 @@
         $http.get('/personages/' + personageId).
         success(function (data) {
             $scope.personage = data.personage;
+            $scope.age = data.personage.age;
+            $scope.max_age = data.personage.max_age;
         });
 
         $scope.deletePersonageMerit = function (personageMerit) {
@@ -375,6 +425,15 @@
         };
 
         $scope.savePersonage = function () {
+            $http.put('/personages/' + personageId, {
+                race_id: $scope.personage.RaceId,
+                name: $scope.personage.name,
+                age: $scope.age,
+                max_age: $scope.max_age,
+                generated: false,
+                experience: $scope.personage.experience
+            });
+
             angular.forEach($scope.personageAttributes, function (personageAttribute) {
                 $http.put('/personageAttributes/' + personageAttribute.id, {
                     value: personageAttribute.value
