--- a/public/views/index.html
+++ b/public/views/index.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+
 </head>
 
 <body ng-app="personageManagerApp">
@@ -65,14 +66,6 @@
         </div>
 
         <div class="form-group">
-            <label class="control-label col-sm-2" for="age">Возраст:</label>
-
-            <div class="col-sm-10">
-                <input type="number" class="form-control" id="age" placeholder="25" ng-model="age" min="0" required>
-            </div>
-        </div>
-
-        <div class="form-group">
             <label class="control-label col-sm-2" for="experience">Очки опыта:</label>
 
             <div class="col-sm-10">
@@ -99,10 +92,12 @@
             $http.post('/personages', {
                 name: $scope.name,
                 race_id: $scope.race_id,
-                age: $scope.age,
+                age: 0,
+                max_age: 0,
                 experience: $scope.experience,
                 generated: false
             }).success(function (result) {
+                $scope.race = result.personage.Race;
                 $http.get('/raceAttributesByRaceId/' + result.personage.RaceId).
                 success(function (results) {
                     for (var i = 0; i < results.raceAttributes.length; i++) {
