more fixes for ages

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -24,6 +24,7 @@
             </td>
             <td style="vertical-align:middle; text-align: center;">{{ personage.Race.name }}</td>
             <td style="vertical-align:middle;text-align: center;">{{ personage.age }} лет</td>
+            <td style="vertical-align:middle;text-align: center;">{{ personage.max_age }} лет</td>
             <td style="vertical-align:middle;text-align: center;">{{ personage.experience }} XP</td>
 
             <td style="text-align: right;">
