--- a/public/views/main-menu.html
+++ b/public/views/main-menu.html
@@ -10,6 +10,7 @@
                 <li class="list-group-item"><a href="/views/race_manager.html">Расы</a></li>
                 <li class="list-group-item"><a href="/views/attribute_manager.html">Аттрибуты</a></li>
                 <li class="list-group-item"><a href="/views/merit_manager.html">Достоинства</a></li>
+                <li class="list-group-item"><a href="/views/inherent_manager.html">Врожденные особенности</a></li>
                 <li class="list-group-item"><a href="/">Персонажи</a></li>
             </ul>
         </div>
