--- a/public/views/race.html
+++ b/public/views/race.html
@@ -133,8 +133,8 @@
     <form class="form-horizontal" role="form" ng-controller="addRaceInherentController"
           name="addRaceInherentForm">
         <div class="form-group">
-            <label class="control-label col-sm-2" for="inherent_id">Достоинство: </label>
-            <div class="col-sm-10">
+            <label class="control-label col-sm-3" for="inherent_id">Достоинство: </label>
+            <div class="col-sm-8">
                 <select class="form-control"
                         ng-model="inherent_id" id="inherent_id" ng-options="inherent.id as inherent.name for inherent in inherents" required>
                     <option style="display:none" value="">Выберите достоинство...</option>
@@ -143,8 +143,8 @@
         </div>
 
         <div class="form-group">
-            <label class="control-label col-sm-2" for="race_probability">Расовая вероятность:</label>
-            <div class="col-sm-10">
+            <label class="control-label col-sm-3" for="race_probability">Расовая вероятность 1/x:</label>
+            <div class="col-sm-8">
                 <input type="number" class="form-control" id="race_probability" ng-model="race_probability" min="0">
             </div>
         </div>
